tests/snapshots/matrix_simd.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  void Main() {
      int seed = 42;
      int[64] a = new int[64];
      for (int i = 0; i < 64; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          a[i] = seed;
      }

      int[64] b = new int[64];
      for (int i = 0; i < 64; i++) {
          seed = (seed * 1103515245 + 12345) % 2147483648;
          b[i] = seed;
      }

      int[64] c = new int[64];

      for (int i = 0; i < 8; i++) {
          for (int k = 0; k < 8; k++) {
              int s = a[i * 8 + k];

              int[4] mask = new int[4];
              for (int j = 0; j < 4; j++) {
                  mask[j] = s;
              }

              for (int j = 0; j < 8; j += 4) {
                  c[i * 8 + j : 4] += mask * b[k * 8 + j : 4];
              }
          }
      }

      for (int i = 0; i < 64; i++) {
          iout(4, c[i]);
      }
      return;
  }
input: []
int_output:
- 6712005494740828460
- 5465166779235792288
- -4415948582139649276
- -8496360253900296552
- -6615020090477071204
- -8708857972265468848
- 8194407181004626932
- -7859834913701933880
- 5824210678312600044
- 3192469215498617504
- -5044052622988105916
- -6408077432756668136
- -4046014990923896740
- -7673463894398533552
- 7814991179948428084
- 8626532972388755016
- 7811619604865227436
- 5003938089838817184
- -3137240921439177852
- -8090972925857934440
- -4777870447372479460
- -7440133706556586928
- 8965516123449844340
- -7342463436649484344
- 6792432259994913644
- 5480971700793097376
- -3955337454603237436
- -8303510851406004712
- -7355824686233290788
- -7798172676888000432
- 6052104919442284980
- -8725767327133996728
- 7201323385594991660
- 6021000327315876256
- -1046191337803553788
- -3010705367046063976
- -2823205564450221156
- -5896914748035183536
- 9041962348988172532
- -6359755306436209976
- 6828813492274230508
- 4205721430381541024
- -4969363856410965948
- -4971787277613939944
- -5124179544798435492
- -8427907035007741872
- -8313126427950032844
- -8657203933926036408
- 5523246413732769196
- 3440532614175761312
- -7348959167510317948
- 7537612128981278104
- -8203882874994445540
- -9056701423621974960
- 5504819586173620084
- 6882133696397555144
- 8323876988430564972
- 5232815356392517792
- -4504246527675815740
- -8127992712580642792
- -7544080943256586532
- -9082920995868305328
- 8965953615100047028
- -7826905328235991224
char_output: ''
log: ' INFO TICK 51785 | Result : 0'
