tests/snapshots/params.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  int calc(int a, int b, int c) {
      return (a + b) * c;
  }

  void Main() {
      int a = 9;
      int b = -1;
      int res = calc(a, b, 4);
      iout(4, res);
      return;
  }
ticks: 161
input: []
int_output:
- 32
char_output: ''
data_section:
- 9
- -1
- 4
- 0
- 48
machine_code: |-
  0x0000 | 03005C00 0001869F                   | MOV.l #99999, A7                    | A7 <- 99999
  0x0002 | 03005400 000003E8                   | MOV.l #1000, A5                     | A5 <- 1000
  0x0004 | 42000000 00000014                   | CALL 0x14                           | MEM[--A7] <- PC + 1; PC <- 0x14
  0x0006 | 00000000                            | HLT                                 | Остановка
  0x0007 | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x0008 | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x0009 | 255C005C 00000000                   | SUB.l A7, #0, A7                    | A7 <- A7 - 0
  0x000B | 21D8D824 00000002 00000003          | ADD.l (A6:#2), (A6:#3), D1          | D1 <- MEM[A6 + 2] + MEM[A6 + 3]
  0x000E | 2724D828 00000004                   | MUL.l D1, (A6:#4), D2               | D2 <- D1 * MEM[A6 + 4]
  0x0010 | 03282000                            | MOV.l D2, D0                        | D0 <- D2
  0x0011 | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x0012 | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x0013 | 44000000                            | RET                                 | PC <- MEM[A7++]
  0x0014 | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x0015 | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x0016 | 255C005C 00000003                   | SUB.l A7, #3, A7                    | A7 <- A7 - 3
  0x0018 | 03E0D800 00000000 FFFFFFFF          | MOV.l (#0), (A6:#-1)                | MEM[A6 + -1] <- MEM[0]
  0x001B | 03E0D800 00000001 FFFFFFFE          | MOV.l (#1), (A6:#-2)                | MEM[A6 + -2] <- MEM[1]
  0x001E | 0324BC00                            | MOV.l D1, -(A7)                     | MEM[--A7] <- D1
  0x001F | 0328BC00                            | MOV.l D2, -(A7)                     | MEM[--A7] <- D2
  0x0020 | 032CBC00                            | MOV.l D3, -(A7)                     | MEM[--A7] <- D3
  0x0021 | 0330BC00                            | MOV.l D4, -(A7)                     | MEM[--A7] <- D4
  0x0022 | 0340BC00                            | MOV.l A0, -(A7)                     | MEM[--A7] <- A0
  0x0023 | 0344BC00                            | MOV.l A1, -(A7)                     | MEM[--A7] <- A1
  0x0024 | 03E0BC00 00000002                   | MOV.l (#2), -(A7)                   | MEM[--A7] <- MEM[2]
  0x0026 | 03D8BC00 FFFFFFFE                   | MOV.l (A6:#-2), -(A7)               | MEM[--A7] <- MEM[A6 + -2]
  0x0028 | 03D8BC00 FFFFFFFF                   | MOV.l (A6:#-1), -(A7)               | MEM[--A7] <- MEM[A6 + -1]
  0x002A | 42000000 00000007                   | CALL 0x7                            | MEM[--A7] <- PC + 1; PC <- 0x7
  0x002C | 215C005C 00000003                   | ADD.l A7, #3, A7                    | A7 <- A7 + 3
  0x002E | 039C4400                            | MOV.l (A7)+, A1                     | A1 <- MEM[A7++]
  0x002F | 039C4000                            | MOV.l (A7)+, A0                     | A0 <- MEM[A7++]
  0x0030 | 039C3000                            | MOV.l (A7)+, D4                     | D4 <- MEM[A7++]
  0x0031 | 039C2C00                            | MOV.l (A7)+, D3                     | D3 <- MEM[A7++]
  0x0032 | 039C2800                            | MOV.l (A7)+, D2                     | D2 <- MEM[A7++]
  0x0033 | 039C2400                            | MOV.l (A7)+, D1                     | D1 <- MEM[A7++]
  0x0034 | 03202400                            | MOV.l D0, D1                        | D1 <- D0
  0x0035 | 0324D800 FFFFFFFD                   | MOV.l D1, (A6:#-3)                  | MEM[A6 + -3] <- D1
  0x0037 | A304D800 FFFFFFFD                   | OUT #4, (A6:#-3)                    | IO[4] <- MEM[A6 + -3]
  0x0039 | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x003A | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x003B | 44000000                            | RET                                 | PC <- MEM[A7++]
  0x003C | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x003D | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x003E | 255C005C 00000000                   | SUB.l A7, #0, A7                    | A7 <- A7 - 0
  0x0040 | 03E02000 00000003                   | MOV.l (#3), D0                      | D0 <- MEM[3]
  0x0042 | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x0043 | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x0044 | 44000000                            | RET                                 | PC <- MEM[A7++]
  0x0045 | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x0046 | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x0047 | 255C005C 00000000                   | SUB.l A7, #0, A7                    | A7 <- A7 - 0
  0x0049 | 02E02000 00000004                   | MOV.b (#4), D0                      | D0 <- MEM[4]
  0x004B | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x004C | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x004D | 44000000                            | RET                                 | PC <- MEM[A7++]
  0x004E | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x004F | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x0050 | 255C005C 00000000                   | SUB.l A7, #0, A7                    | A7 <- A7 - 0
  0x0052 | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x0053 | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x0054 | 44000000                            | RET                                 | PC <- MEM[A7++]
  0x0055 | 0358BC00                            | MOV.l A6, -(A7)                     | MEM[--A7] <- A6
  0x0056 | 035C5800                            | MOV.l A7, A6                        | A6 <- A7
  0x0057 | 255C005C 00000000                   | SUB.l A7, #0, A7                    | A7 <- A7 - 0
  0x0059 | 03585C00                            | MOV.l A6, A7                        | A7 <- A6
  0x005A | 039C5800                            | MOV.l (A7)+, A6                     | A6 <- MEM[A7++]
  0x005B | 44000000                            | RET                                 | PC <- MEM[A7++]
log: |2-
   INFO [PC: 0   ] MOV.l #99999, A7          (Ticks: 1 -> 2)
   INFO   └─ [T2] Write: A7 = 99999
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 0, 0, 99999]]
   INFO [PC: 2   ] MOV.l #1000, A5           (Ticks: 3 -> 4)
   INFO   └─ [T4] Write: A5 = 1000
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 0, 99999]]
   INFO [PC: 4   ] CALL.b 20                 (Ticks: 5 -> 9)
   INFO   └─ [T9] Write: MEM[99998] = 6
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 0, 99998]]
   INFO [PC: 20  ] MOV.l A6, -(A7)           (Ticks: 10 -> 14)
   INFO   └─ [T13] Read: MEM[99997] = 0
   INFO   └─ [T14] Write: MEM[99997] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 0, 99997]]
   INFO [PC: 21  ] MOV.l A7, A6              (Ticks: 15 -> 16)
   INFO   └─ [T16] Write: A6 = 99997
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99997]]
   INFO [PC: 22  ] SUB.l A7, #3, A7          (Ticks: 17 -> 18)
   INFO   └─ [T18] Write: A7 = 99994
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 24  ] MOV.l (0), (A6, #-1)      (Ticks: 19 -> 24)
   INFO   └─ [T21] Read: MEM[0] = 9
   INFO   └─ [T23] Read: MEM[99996] = 0
   INFO   └─ [T24] Write: MEM[99996] = 9
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 27  ] MOV.l (1), (A6, #-2)      (Ticks: 25 -> 30)
   INFO   └─ [T27] Read: MEM[1] = -1
   INFO   └─ [T29] Read: MEM[99995] = 0
   INFO   └─ [T30] Write: MEM[99995] = -1
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 30  ] MOV.l D1, -(A7)           (Ticks: 31 -> 35)
   INFO   └─ [T34] Read: MEM[99993] = 0
   INFO   └─ [T35] Write: MEM[99993] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99993]]
   INFO [PC: 31  ] MOV.l D2, -(A7)           (Ticks: 36 -> 40)
   INFO   └─ [T39] Read: MEM[99992] = 0
   INFO   └─ [T40] Write: MEM[99992] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99992]]
   INFO [PC: 32  ] MOV.l D3, -(A7)           (Ticks: 41 -> 45)
   INFO   └─ [T44] Read: MEM[99991] = 0
   INFO   └─ [T45] Write: MEM[99991] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99991]]
   INFO [PC: 33  ] MOV.l D4, -(A7)           (Ticks: 46 -> 50)
   INFO   └─ [T49] Read: MEM[99990] = 0
   INFO   └─ [T50] Write: MEM[99990] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99990]]
   INFO [PC: 34  ] MOV.l A0, -(A7)           (Ticks: 51 -> 55)
   INFO   └─ [T54] Read: MEM[99989] = 0
   INFO   └─ [T55] Write: MEM[99989] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99989]]
   INFO [PC: 35  ] MOV.l A1, -(A7)           (Ticks: 56 -> 60)
   INFO   └─ [T59] Read: MEM[99988] = 0
   INFO   └─ [T60] Write: MEM[99988] = 0
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99988]]
   INFO [PC: 36  ] MOV.l (2), -(A7)          (Ticks: 61 -> 66)
   INFO   └─ [T63] Read: MEM[2] = 4
   INFO   └─ [T65] Read: MEM[99987] = 0
   INFO   └─ [T66] Write: MEM[99987] = 4
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99987]]
   INFO [PC: 38  ] MOV.l (A6, #-2), -(A7)    (Ticks: 67 -> 72)
   INFO   └─ [T69] Read: MEM[99995] = -1
   INFO   └─ [T71] Read: MEM[99986] = 0
   INFO   └─ [T72] Write: MEM[99986] = -1
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99986]]
   INFO [PC: 40  ] MOV.l (A6, #-1), -(A7)    (Ticks: 73 -> 78)
   INFO   └─ [T75] Read: MEM[99996] = 9
   INFO   └─ [T77] Read: MEM[99985] = 0
   INFO   └─ [T78] Write: MEM[99985] = 9
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99985]]
   INFO [PC: 42  ] CALL.b 7                  (Ticks: 79 -> 83)
   INFO   └─ [T83] Write: MEM[99984] = 44
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99984]]
   INFO [PC: 7   ] MOV.l A6, -(A7)           (Ticks: 84 -> 88)
   INFO   └─ [T87] Read: MEM[99983] = 0
   INFO   └─ [T88] Write: MEM[99983] = 99997
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99983]]
   INFO [PC: 8   ] MOV.l A7, A6              (Ticks: 89 -> 90)
   INFO   └─ [T90] Write: A6 = 99983
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 9   ] SUB.l A7, #0, A7          (Ticks: 91 -> 92)
   INFO   └─ [T92] Write: A7 = 99983
  DEBUG D: [[0, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 11  ] ADD.l (A6, #2), (A6, #3), D1 (Ticks: 93 -> 98)
   INFO   └─ [T95] Read: MEM[99985] = 9
   INFO   └─ [T97] Read: MEM[99986] = -1
   INFO   └─ [T98] Write: D1 = 8
  DEBUG D: [[0, 8, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 14  ] MUL.l D1, (A6, #4), D2    (Ticks: 99 -> 103)
   INFO   └─ [T102] Read: MEM[99987] = 4
   INFO   └─ [T103] Write: D2 = 32
  DEBUG D: [[0, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 16  ] MOV.l D2, D0              (Ticks: 104 -> 105)
   INFO   └─ [T105] Write: D0 = 32
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 17  ] MOV.l A6, A7              (Ticks: 106 -> 107)
   INFO   └─ [T107] Write: A7 = 99983
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99983, 99983]]
   INFO [PC: 18  ] MOV.l (A7)+, A6           (Ticks: 108 -> 111)
   INFO   └─ [T110] Read: MEM[99983] = 99997
   INFO   └─ [T111] Write: A6 = 99997
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99984]]
   INFO [PC: 19  ] RET.b                     (Ticks: 112 -> 114)
   INFO   └─ [T114] Read: MEM[99984] = 44
   INFO   └─ [T114] Returning to 44
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99985]]
   INFO [PC: 44  ] ADD.l A7, #3, A7          (Ticks: 115 -> 116)
   INFO   └─ [T116] Write: A7 = 99988
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99988]]
   INFO [PC: 46  ] MOV.l (A7)+, A1           (Ticks: 117 -> 120)
   INFO   └─ [T119] Read: MEM[99988] = 0
   INFO   └─ [T120] Write: A1 = 0
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99989]]
   INFO [PC: 47  ] MOV.l (A7)+, A0           (Ticks: 121 -> 124)
   INFO   └─ [T123] Read: MEM[99989] = 0
   INFO   └─ [T124] Write: A0 = 0
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99990]]
   INFO [PC: 48  ] MOV.l (A7)+, D4           (Ticks: 125 -> 128)
   INFO   └─ [T127] Read: MEM[99990] = 0
   INFO   └─ [T128] Write: D4 = 0
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99991]]
   INFO [PC: 49  ] MOV.l (A7)+, D3           (Ticks: 129 -> 132)
   INFO   └─ [T131] Read: MEM[99991] = 0
   INFO   └─ [T132] Write: D3 = 0
  DEBUG D: [[32, 8, 32, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99992]]
   INFO [PC: 50  ] MOV.l (A7)+, D2           (Ticks: 133 -> 136)
   INFO   └─ [T135] Read: MEM[99992] = 0
   INFO   └─ [T136] Write: D2 = 0
  DEBUG D: [[32, 8, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99993]]
   INFO [PC: 51  ] MOV.l (A7)+, D1           (Ticks: 137 -> 140)
   INFO   └─ [T139] Read: MEM[99993] = 0
   INFO   └─ [T140] Write: D1 = 0
  DEBUG D: [[32, 0, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 52  ] MOV.l D0, D1              (Ticks: 141 -> 142)
   INFO   └─ [T142] Write: D1 = 32
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 53  ] MOV.l D1, (A6, #-3)       (Ticks: 143 -> 147)
   INFO   └─ [T146] Read: MEM[99994] = 0
   INFO   └─ [T147] Write: MEM[99994] = 32
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 55  ] OUT.l #4, (A6, #-3)       (Ticks: 148 -> 150)
   INFO   └─ [T150] Read: MEM[99994] = 32
   INFO   └─ [T150] OUT to port #4: Value = 32
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99994]]
   INFO [PC: 57  ] MOV.l A6, A7              (Ticks: 151 -> 152)
   INFO   └─ [T152] Write: A7 = 99997
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 99997, 99997]]
   INFO [PC: 58  ] MOV.l (A7)+, A6           (Ticks: 153 -> 156)
   INFO   └─ [T155] Read: MEM[99997] = 0
   INFO   └─ [T156] Write: A6 = 0
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 0, 99998]]
   INFO [PC: 59  ] RET.b                     (Ticks: 157 -> 159)
   INFO   └─ [T159] Read: MEM[99998] = 6
   INFO   └─ [T159] Returning to 6
  DEBUG D: [[32, 32, 0, 0, 0, 0, 0, 0]] | A: [[0, 0, 0, 0, 0, 1000, 0, 99999]]
   INFO Result: D0 = 32
