tests/snapshots/return.snap
---
source: tests/golden.rs
expression: yaml
---
program: |-
  int Main() {
      if (false) {
          return 1;
      }
      else if (true) {
          return 2;
      }
      else {
          return 3;
      }
  }
ticks: 47
input: []
int_output: []
char_output: ''
data_section:
- 0
- 0
- 48
- 1
- 1
- 2
- 3
machine_code: |-
  0x0000: 0x03005C00   MOV.w A7, #0x0001869F
  0x0002: 0x03005400   MOV.w A5, #0x000003E8
  0x0004: 0x42000000   CALL.b 0x0000000000000007
  0x0006: 0x00000000   HLT.b
  0x0007: 0x0358BC00   MOV.w -(A7), A6
  0x0008: 0x035C5800   MOV.w A6, A7
  0x0009: 0x255C005C   SUB.w #0x00000000, A7
  0x000B: 0x04E00000   CMP.b #0x00000001, (#0x00000000)
  0x000E: 0x60000000   BEQ.b 0x0000000000000032
  0x0010: 0x40000000   JMP.b 0x0000000000000037
  0x0012: 0x0358BC00   MOV.w -(A7), A6
  0x0013: 0x035C5800   MOV.w A6, A7
  0x0014: 0x255C005C   SUB.w #0x00000000, A7
  0x0016: 0x03E02000   MOV.w D0, (#0x00000001)
  0x0018: 0x03585C00   MOV.w A7, A6
  0x0019: 0x039C5800   MOV.w A6, (A7)+
  0x001A: 0x44000000   RET.b
  0x001B: 0x0358BC00   MOV.w -(A7), A6
  0x001C: 0x035C5800   MOV.w A6, A7
  0x001D: 0x255C005C   SUB.w #0x00000000, A7
  0x001F: 0x02E02000   MOV.b D0, (#0x00000002)
  0x0021: 0x03585C00   MOV.w A7, A6
  0x0022: 0x039C5800   MOV.w A6, (A7)+
  0x0023: 0x44000000   RET.b
  0x0024: 0x0358BC00   MOV.w -(A7), A6
  0x0025: 0x035C5800   MOV.w A6, A7
  0x0026: 0x255C005C   SUB.w #0x00000000, A7
  0x0028: 0x03585C00   MOV.w A7, A6
  0x0029: 0x039C5800   MOV.w A6, (A7)+
  0x002A: 0x44000000   RET.b
  0x002B: 0x0358BC00   MOV.w -(A7), A6
  0x002C: 0x035C5800   MOV.w A6, A7
  0x002D: 0x255C005C   SUB.w #0x00000000, A7
  0x002F: 0x03585C00   MOV.w A7, A6
  0x0030: 0x039C5800   MOV.w A6, (A7)+
  0x0031: 0x44000000   RET.b
  0x0032: 0x03E02000   MOV.w D0, (#0x00000003)
  0x0034: 0x03585C00   MOV.w A7, A6
  0x0035: 0x039C5800   MOV.w A6, (A7)+
  0x0036: 0x44000000   RET.b
  0x0037: 0x04E00000   CMP.b #0x00000001, (#0x00000004)
  0x003A: 0x60000000   BEQ.b 0x000000000000003E
  0x003C: 0x40000000   JMP.b 0x0000000000000043
  0x003E: 0x03E02000   MOV.w D0, (#0x00000005)
  0x0040: 0x03585C00   MOV.w A7, A6
  0x0041: 0x039C5800   MOV.w A6, (A7)+
  0x0042: 0x44000000   RET.b
  0x0043: 0x03E02000   MOV.w D0, (#0x00000006)
  0x0045: 0x03585C00   MOV.w A7, A6
  0x0046: 0x039C5800   MOV.w A6, (A7)+
  0x0047: 0x44000000   RET.b
log: |2-
   INFO TICK 0 | PC=0 | MOV.w
   INFO TICK 1 | #99999
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 0, 0, 99999]
   INFO TICK 2 | PC=2 | MOV.w
   INFO TICK 3 | #1000
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 0, 99999]
   INFO TICK 4 | PC=4 | CALL.b
   INFO TICK 5
   INFO TICK 6
   INFO TICK 7
   INFO TICK 8
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 0, 99998]
   INFO TICK 9 | PC=7 | MOV.w
   INFO TICK 10 | A6
   INFO TICK 11 | -(A7)
   INFO TICK 12 | Load (#99997) = 0
   INFO TICK 13 | Store (#99997) = 0
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 0, 99997]
   INFO TICK 14 | PC=8 | MOV.w
   INFO TICK 15 | A7
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 16 | PC=9 | SUB.w
   INFO TICK 17 | A7 | #0
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 18 | PC=11 | CMP.b
   INFO TICK 19 | (#0)
   INFO TICK 20 | Load (#0) = 0
   INFO TICK 21 | #1
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 22 | PC=14 | BEQ.b
   INFO TICK 23
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 24 | PC=16 | JMP.b
   INFO TICK 25
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 26 | PC=55 | CMP.b
   INFO TICK 27 | (#4)
   INFO TICK 28 | Load (#4) = 1
   INFO TICK 29 | #1
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 30 | PC=58 | BEQ.b
   INFO TICK 31
  DEBUG D [0, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 32 | PC=62 | MOV.w
   INFO TICK 33 | (#5)
   INFO TICK 34 | Load (#5) = 2
   INFO TICK 35
  DEBUG D [2, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 36 | PC=64 | MOV.w
   INFO TICK 37 | A6
  DEBUG D [2, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 99997, 99997]
   INFO TICK 38 | PC=65 | MOV.w
   INFO TICK 39 | (A7)+
   INFO TICK 40 | Load (#99997) = 0
   INFO TICK 41
  DEBUG D [2, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 0, 99998]
   INFO TICK 42 | PC=66 | RET.b
   INFO TICK 43
   INFO TICK 44
  DEBUG D [2, 0, 0, 0, 0, 0, 0, 0]
  DEBUG A [0, 0, 0, 0, 0, 1000, 0, 99999]
   INFO TICK 45 | PC=6 | HLT.b
   INFO TICK 46 | Result : 2
